Update build.xml test to Java 17